# GithubRepoLens

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
app/: __init__.py  config.py  main.py  models.py
app/api/: routes.py  schemas.py
app/core/: agent.py  config.py  llm_factory.py  logging.py  mcp_client.py
app/prompts/: base.py  research_prompt.txt
app/prompts/templates/: analysis.yaml  report.yaml  system.yaml
app/providers/: __init__.py  llm.py
app/services/: analyzer.py  pdf_generator.py  research_service.py
app/tasks/: celery_app.py  celery_tasks.py  pdf.py
frontend/: README.md  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/components/: analysis-feature.tsx  hero-input.tsx  language-switcher.tsx
frontend/components/chat/: analysis-view.tsx  markdown-viewer.tsx  tool-calls-panel.tsx  tool-status.tsx
frontend/context/: language-context.tsx
frontend/hooks/: use-analysis.ts
frontend/lib/: sse-parser.ts  translations.ts
frontend/types/: api.ts
tests/: conftest.py  test_analyzer.py  test_api.py  test_celery.py  test_config.py  test_graph.py  test_llm_factory.py  test_mcp_client.py  test_prompts.py  test_providers.py
